fix: badge-gap

--- a/web/src/components/Badges/Badges.module.css
+++ b/web/src/components/Badges/Badges.module.css
@@ -16,7 +16,7 @@
 .badgesContainer {
   display: flex;
   width: 100%;
-  gap: 32px;
+  gap: 24px;
   flex-wrap: wrap;
   justify-content: center;
 }
